Bugfix: Cpu bars cell height to high, causes jumping when expanding/collapsing tree item

--- a/www/electrified/styles.css
+++ b/www/electrified/styles.css
@@ -1,5 +1,5 @@
 .cpu-bars-container {
-    height: 16px;
+    height: 15px;
     transform: translate(0,0);
     display: flex;
     gap: 2px;
